--- a/style.css
+++ b/style.css
@@ -1,24 +1,31 @@
-*{
+* {
   padding: 0;
   margin: 0;
   text-decoration: none;
   list-style: none;
   box-sizing: border-box;
 }
-nav{
+
+html {
+  scroll-behavior: smooth;
+}
+
+nav {
   background: #edecec;
   height: 80px;
   width: 100%;
 }
-.logo{
+
+.logo {
   color: #46a5ed;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 35px;
   line-height: 80px;
-  padding-left:80px;
+  padding-left: 80px;
   font-weight: bold;
 }
-.logo1{
+
+.logo1 {
   color: black;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 35px;
@@ -26,16 +33,19 @@ nav{
   padding-left: 6px;
   font-weight: bold;
 }
-nav ul{
+
+nav ul {
   float: right;
   margin-right: 20px;
 }
-nav ul li{
+
+nav ul li {
   display: inline-block;
   margin-top: 28px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-nav ul li a{
+
+nav ul li a {
   color: rgb(31, 29, 29);
   font-size: 20px;
   padding: 7px 13px;
@@ -43,11 +53,13 @@ nav ul li a{
   text-transform: uppercase;
   font-weight: 100;
 }
-a:hover{
+
+a:hover {
   background: #46a5ed;
   transition: 1s;
 }
-.title{
+
+.title {
   text-align: center;
   margin-top: 60px;
   font-family: system-ui;
@@ -55,97 +67,118 @@ a:hover{
   font-size: 50px;
   -webkit-text-stroke: 1.5px black;
 }
-#c1{
+
+#c1 {
   background-image: url(./images/backgroundimage1.jpg);
   background-repeat: no-repeat;
   height: 425px;
 }
-.image{
+
+.image {
   text-align: center;
 }
-.image:hover{
+
+.image:hover {
   transform: scale(1.1);
   transition: 1s;
 }
-.description{
+
+.description {
   text-align: center;
   margin-top: 90px;
-  font-family: sans-serif ;
+  font-family: sans-serif;
   letter-spacing: 1px;
   line-height: 30px;
   font-weight: 350;
 }
-.tdm{
-  color:#46a5ed;
-  -webkit-text-stroke:0.8px #46a5ed;
+
+.tdm {
+  color: #46a5ed;
+  -webkit-text-stroke: 0.8px #46a5ed;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 35px;
   line-height: 70px;
   font-weight: 500;
 }
-.waters{
+
+.waters {
   color: black;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 35px;
   line-height: 70px;
   font-weight: 500;
 }
-.team{
+
+.team {
   text-align: center;
   color: #46a5ed;
   font-size: 35px;
-  margin-top: 40px;
+  margin-top: 50px;
   margin-bottom: 10px;
   font-weight: 400;
 }
-.teamdescription{
+
+.teamdescription {
   text-align: center;
   font-weight: 500;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   line-height: 1.5;
   font-size: x-large;
 }
-.card{
+
+.card {
   margin-top: 40px;
   box-shadow: 0 10px 20px rgb(0 0 0 / 12%), 0 4px 8px rgb(0 0 0 / 6%);
   text-align: center;
-  padding: 10px; 
+  padding: 10px;
 }
-.card-title{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  margin-top: 10px;
+
+.card-title {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin: 20px 0px;
   font-weight: 500;
 }
-.post{
+
+.post {
   margin-top: 5px;
   margin-bottom: 10px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 300;
+  line-height: 1.5;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
 }
-.footer{
+
+.footer {
   background-color: #e5f3ff;
-  margin-top: 30px;
   padding-top: 20px;
+  margin-top: 100px;
 }
-.aboutaddress{
+
+.aboutaddress {
   text-align: center;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: 500;
   margin-bottom: 20px;
   text-decoration: underline;
 }
-.aboutdescription{
+
+.aboutdescription {
   text-align: justify;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 450;
   padding: 5px;
   margin-bottom: 10px;
 }
-.address{
+
+.address {
   font-weight: 450;
   padding: 5px;
 }
-.btnfooter{
+
+.btnfooter {
   padding: 7px;
   margin: 10px;
   float: right;
@@ -154,112 +187,692 @@ a:hover{
   background-color: #6c757d;
   border: 0px;
 }
-.btnfooter:hover{
+
+.btnfooter:hover {
   background: #7da6db;
   color: #000;
   transition: 0.6s ease;
 }
-.copyright{
-  font-family: 'Lucida Sans';
+
+.copyright {
+  font-family: "Lucida Sans";
   margin-top: 5px;
   font-weight: 450;
   letter-spacing: 0.5px;
   padding-bottom: 10px;
 }
-.addcon{
+
+.addcon {
   text-align: center;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: 450;
   text-decoration: underline;
   margin-bottom: 35px;
 }
-.lablecon{
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 18px; 
+
+.lablecon {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 18px;
 }
-.submitbtn,.probutton{
-  padding:12px 25px 10px 25px;
+
+.submitbtn,
+.probutton {
+  padding: 12px 25px 10px 25px;
   border-radius: 5px;
   color: #fff;
   background-color: #0d6efd;
   border: 0px;
   font-size: 17px;
 }
-.submitbtn:hover,.probutton:hover{
+
+.submitbtn:hover,
+.probutton:hover {
   background-color: #46a5ed;
   color: black;
 }
-.conadd{
+
+.conadd {
   font-weight: 500;
   padding: 10px;
   text-align: center;
 }
-.serviceimg{
+
+.serviceimg {
   height: 130px;
   width: 130px;
 }
-.card:hover{
+
+.card:hover {
   transform: scale(1.1);
-  transition: 0.80s;
+  transition: 0.8s;
   animation: ease-in-out;
 }
-.productimg{
+
+.productimg {
   height: 300px;
   width: 200px;
 }
-.aboutimage{
+
+.aboutimage {
   height: 60%;
   width: 60%;
 }
-.aboutdescription{
-  font-family:Georgia, 'Times New Roman', Times, serif;
+
+.aboutdescription {
+  font-family: Georgia, "Times New Roman", Times, serif;
   line-height: 1.5;
   color: rgb(46, 46, 46);
 }
-.greeting{
- font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
- font-weight: 400;
- text-align: center;
+
+.greeting {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  text-align: center;
 }
-.knowmore{
+
+.knowmore {
   font-weight: 500;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   line-height: 1.1;
   font-size: x-large;
   margin-top: 15px;
 }
-.img1{
+
+.img1 {
   text-align: center;
   margin-top: 120px;
 }
-.img1:hover{
+
+.img1:hover {
   transform: scale(1.1);
   transition: 1s;
 }
-.buyproduct{
+
+.buyproduct {
   text-align: center;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: 450;
   text-decoration: underline;
   margin-bottom: 35px;
   margin-top: 70px;
 }
-.purdesign{
-width: 100%;
-border-radius: 5px; 
-padding: 10px; 
-margin-top: 13px; 
-margin-bottom: 13px; 
-background-color:#e5f3ff; 
-border: 0px;
+
+.purdesign {
+  width: 100%;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 13px;
+  margin-bottom: 13px;
+  background-color: #e5f3ff;
+  border: 0px;
 }
-.footerfield
-{width: 100%; 
-  border-radius: 5px; 
-  padding: 10px; 
+
+.footerfield {
+  width: 100%;
+  border-radius: 5px;
+  padding: 10px;
   margin-top: 7px;
-  border: 0px; 
-  font-family: 'Courier New', Courier, monospace;}
-  .socialmedia:hover{
-    transform: scale(1.1);
+  border: 0px;
+  font-family: "Courier New", Courier, monospace;
+}
+
+.socialmedia:hover {
+  transform: scale(1.1);
+}
+
+@media (width>=1440px) {
+  .container-fluid .row {
+    height: auto;
+
+    & .col-6 {
+      & .description {
+        font-size: 16px;
+
+        & .tdm,
+        .waters {
+          font-size: 35px;
+        }
+      }
+
+      & .image {
+        width: 100%;
+        margin-top: 10px;
+      }
+    }
   }
+}
+
+@media (width<=1024px) {
+  nav {
+
+    & .logo,
+    .logo1 {
+      font-size: 30px;
+    }
+
+    & ul li a {
+      font-size: 16px;
+      padding: 7px 18px;
+    }
+  }
+
+  .container-fluid .row {
+    & .col-6 {
+      & .description {
+        font-size: 15px;
+
+        & .tdm,
+        .waters {
+          font-size: 30px;
+        }
+      }
+
+      & .image {
+        height: 124%;
+        margin-top: 70px;
+      }
+    }
+  }
+
+  .team {
+    font-size: 30px;
+  }
+
+  .teamdescription {
+    font-size: 20px;
+  }
+
+  .container .row .col-4 {
+    & .card {
+      & .card-img-top {
+        width: 80%;
+        height: auto;
+      }
+
+      & .card-body {
+        & .card-title {
+          font-size: 22px;
+        }
+
+        & .post {
+          font-size: 15px;
+        }
+      }
+    }
+  }
+
+  footer {
+    margin-top: 100px;
+
+    & .container-fluid .row .col-6 {
+      & .aboutaddress {
+        font-size: 22px;
+      }
+
+      & .aboutdescription,
+      .address {
+        font-size: 16px;
+      }
+    }
+  }
+
+  .container .row .col-3 .card {
+    & .card-body {
+      & .productimg {
+        width: 100%;
+        aspect-ratio: 1;
+        text-align: center;
+      }
+
+      & .card-title {
+        font-size: 22px;
+      }
+
+      & .post {
+        font-size: 15px;
+      }
+
+      & .probutton {
+        font-size: 15px;
+      }
+    }
+  }
+
+  .container .row .col-6 {
+    & form {
+      & .buyproduct {
+        font-size: 22px;
+      }
+
+      & .submitbtn {
+        font-size: 15px;
+      }
+    }
+  }
+
+  .container .row .col-4 .card .card-body {
+    & .card-title {
+      font-size: 22px;
+      margin: 20px 0px;
+    }
+
+    & .post {
+      line-height: 1.5;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
+  }
+
+  .container .row .col-6 {
+    & form {
+      & .addcon {
+        font-size: 22px;
+      }
+    }
+  }
+
+  .container-fluid .row .col-7,
+  .col-5 {
+    & .knowmore {
+      font-size: 22px;
+    }
+
+    & .aboutdescription {
+      font-size: 15px;
+    }
+
+    & .greeting {
+      font-size: 20px;
+    }
+
+    & .card {
+      width: 100%;
+      height: auto;
+      margin-top: 76px;
+    }
+  }
+
+  @media (width<=768px) {
+    nav {
+      display: flex;
+      justify-content: space-between;
+
+      & .logo {
+        padding-left: 20px;
+      }
+
+      & .logo1 {
+        margin-left: -75px;
+      }
+
+      & ul li a {
+        padding: 8px;
+      }
+
+      & ul {
+        margin-top: 1px;
+      }
+    }
+
+    .container-fluid,
+    #c1 {
+      height: 400px;
+
+      & .row {
+        & .col-6 {
+          text-align: center;
+
+          & .description {
+            font-size: 14px;
+            text-align: center;
+            margin-top: 45px;
+
+            & .tdm,
+            .waters {
+              font-size: 26px;
+            }
+          }
+
+          & .image {
+            height: auto;
+            text-align: center;
+
+            & img {
+              width: 105%;
+              margin-top: 15px;
+            }
+          }
+        }
+      }
+    }
+
+    .team {
+      font-size: 26px;
+    }
+
+    .teamdescription {
+      font-size: 17px;
+    }
+
+    .container .row .col-4 {
+      display: flex;
+
+      & .card {
+        padding: 2px;
+
+        & .card-body {
+          & .card-title {
+            font-size: 20px;
+            margin: 10px 0px;
+          }
+
+          & .post {
+            font-size: 14px;
+            letter-spacing: 1px;
+            padding: 2px;
+          }
+        }
+      }
+    }
+
+    footer {
+
+      & .container-fluid,
+      #c1 {
+        height: 290px;
+
+        & .row .col-6 {
+          & .btnfooter {
+            font-size: 12px;
+            letter-spacing: 1px;
+          }
+
+          & .aboutaddress {
+            font-size: 20px;
+          }
+
+          & .aboutdescription,
+          .address {
+            font-size: 15px;
+          }
+        }
+      }
+    }
+
+    .container .formrow {
+      display: grid;
+      grid-template-columns: repeat(1, 12fr);
+
+      & .col-6 {
+        max-width: 100%;
+        margin-bottom: -50px;
+
+        & .img1 img {
+          display: none;
+        }
+      }
+    }
+
+    .products .row {
+      display: grid;
+      grid-template-columns: repeat(2, 6fr);
+      gap: 20px;
+
+      & .col-3 {
+        max-width: 100%;
+
+        & .card .card-body {
+          & .productimg {
+            width: 190px;
+            height: 300px;
+          }
+        }
+      }
+    }
+
+    .container .row .col-4 .card .card-body {
+      padding: 8px;
+
+      & .post {
+        -webkit-line-clamp: 4;
+      }
+    }
+
+    .contact .row {
+      display: grid;
+      grid-template-columns: repeat(1, 12fr);
+
+      & .col-6 .image img {
+        display: none;
+      }
+
+      & .col-6 {
+        margin-top: 40px;
+        max-width: 100%;
+      }
+    }
+
+    .about {
+      margin-bottom: -100px;
+
+      & .row {
+        display: grid;
+        grid-template-columns: repeat(1, 12fr);
+
+        & .col-7 {
+          max-width: 100%;
+
+          & .knowmore {
+            font-size: 18px;
+          }
+
+          & .aboutdescription {
+            font-size: 15px;
+          }
+
+          & .greeting {
+            font-size: 18px;
+          }
+        }
+
+        & .col-5 {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media (width<=425px) {
+  nav {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    place-items: center;
+    height: auto;
+
+    & .logo {
+      padding-left: 0px;
+      margin-left: -75px;
+      grid-column: 1/3;
+      grid-row: 1/2;
+    }
+
+    & .logo1 {
+      margin-left: 95px;
+      grid-column: 1/3;
+      grid-row: 1/2;
+    }
+
+    & ul {
+      display: grid;
+      grid-column: 1/3;
+      margin: -30px 0px 20px 20px;
+
+      & li:nth-child(1) {
+        margin-left: 16px;
+      }
+
+      & li:nth-child(2) {
+        margin-left: -8px;
+      }
+
+      & li:nth-child(3) {
+        margin-left: -6px;
+      }
+
+      & li:nth-child(4) {
+        margin-left: 1px;
+      }
+
+      & li:nth-child(5) {
+        margin-left: -5px;
+      }
+    }
+  }
+
+  .container-fluid,
+  #c1 {
+    height: auto;
+
+    & .row {
+      flex-direction: column;
+
+      & .col-6 {
+        & .description {
+          width: 220%;
+        }
+      }
+
+      & .image {
+        display: none;
+
+        & img {
+          display: none;
+        }
+      }
+    }
+  }
+
+  .container .row {
+    display: grid;
+    grid-template-columns: 1fr;
+
+
+    & .col-4 {
+      display: flex;
+      max-width: 100%;
+
+      & .card {
+        margin-left: 80px;
+        padding: 2px;
+
+        & .card-img-top {
+          width: 70%;
+          height: auto;
+        }
+      }
+    }
+  }
+
+  footer {
+
+    & .container-fluid,
+    #c1 {
+      height: auto;
+
+      & .row {
+        display: grid;
+        grid-template-columns: 1fr;
+        row-gap: 30px;
+
+        & .col-6 {
+          max-width: 100%;
+        }
+      }
+    }
+
+    & center {
+      margin-top: 25px;
+    }
+  }
+
+  .products .row {
+    & .col-3 {
+      max-width: 80%;
+      margin-left: 43px;
+
+      & .card .card-body {
+        & .productimg {
+          width: 150px;
+          height: 260px;
+        }
+      }
+    }
+  }
+
+  .container .row {
+    & .col-4 {
+      margin-left: -36px;
+
+      & .post {
+        -webkit-line-clamp: 3;
+      }
+    }
+  }
+
+  .about {
+    margin-bottom: 100px;
+  }
+
+  .copyright {
+    padding: 8px;
+  }
+}
+
+@media (width<=375px) {
+  .copyright {
+    padding: 8px;
+  }
+
+  .container .row {
+    & .col-4 {
+      margin-left: -40px;
+
+      & .post {
+        -webkit-line-clamp: 3;
+      }
+    }
+  }
+
+  .products .row {
+    & .col-3 {
+      margin-left: 37px;
+    }
+  }
+}
+
+@media (width<=320px) {
+
+  .container-fluid,
+  #c1 {
+    & .row {
+      & .col-6 {
+        & .description {
+          width: 230%;
+          margin-left: -4px;
+        }
+      }
+    }
+  }
+
+  .member .row {
+    & .col-4 {
+      & .card {
+        margin-left: 60px;
+      }
+    }
+  }
+}
